--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,16 @@
 					<warSourceDirectory>src/main/webapp</warSourceDirectory>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<url>http://127.0.0.1:9090/manager/text</url>
+					<path>/jblog2</path>
+					<username>admin</username>
+					<password>manager</password>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
